--- a/mod_cluster-discovery/server/pom.xml
+++ b/mod_cluster-discovery/server/pom.xml
@@ -10,22 +10,13 @@
     <artifactId>server</artifactId>
     <packaging>jar</packaging>
 
-    <name>server</name>
-    <url>http://maven.apache.org</url>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <version.org.wildfly.plugins.wildfly-maven-plugin>4.2.1.Final</version.org.wildfly.plugins.wildfly-maven-plugin>
-    </properties>
+    <name>WildFly Clustering Examples: mod_cluster-discovery-server</name>
 
     <dependencies>
         <!-- clusterbench ejb ear -->
         <dependency>
             <groupId>org.jboss.test</groupId>
             <artifactId>clusterbench-ee10-ejb</artifactId>
-            <version>7.0.0.Final</version>
         </dependency>
     </dependencies>
 
@@ -49,7 +40,7 @@
                                 <artifactItem>
                                     <groupId>org.jboss.test</groupId>
                                     <artifactId>clusterbench-ee10-ear</artifactId>
-                                    <version>7.0.0.Final</version>
+                                    <version>${version.clusterbench}</version>
                                     <type>ear</type>
                                     <outputDirectory>${project.basedir}/deployment</outputDirectory>
                                     <destFileName>clusterbench-ee10.ear</destFileName>
