--- a/mod_cluster-discovery/client/pom.xml
+++ b/mod_cluster-discovery/client/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.wildfly.clustering.examples</groupId>
         <artifactId>mod_cluster-discovery</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0.Final-SNAPSHOT</version>
     </parent>
 
     <artifactId>mod_cluster-discovery-client</artifactId>
@@ -50,7 +50,7 @@
                         <argument>-Djava.util.logging.manager=org.jboss.logmanager.LogManager</argument>
                         <argument>-Dlogging.configuration=file://${logging.properties.file}</argument>
                         <argument>-classpath</argument>
-                        <classpath></classpath>
+                        <classpath />
                         <argument>org.wildfly.clustering.examples.RemoteEJBClient</argument>
                     </arguments>
                 </configuration>
