--- a/mod_cluster-discovery/pom.xml
+++ b/mod_cluster-discovery/pom.xml
@@ -3,11 +3,11 @@
     <parent>
         <groupId>org.wildfly.clustering.examples</groupId>
         <artifactId>wildfly-clustering-examples-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0.Final-SNAPSHOT</version>
     </parent>
 
     <artifactId>mod_cluster-discovery</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0.Final-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>WildFly Clustering Examples: mod_cluster-discovery</name>
