--- a/mod_cluster-with-tls/client/pom.xml
+++ b/mod_cluster-with-tls/client/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.wildfly.clustering.examples</groupId>
         <artifactId>mod_cluster-with-tls</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0.Final-SNAPSHOT</version>
     </parent>
 
     <artifactId>mod_cluster-with-tls-client</artifactId>
@@ -37,7 +37,7 @@
                     <workingDirectory>${project.build.directory}/exec-working-directory</workingDirectory>
                     <arguments>
                         <argument>-classpath</argument>
-                        <classpath></classpath>
+                        <classpath />
                         <argument>org.wildfly.clustering.examples.RemoteEJBClient</argument>
                     </arguments>
                 </configuration>
