Align copyright headers with WildFly one.

--- a/mod_cluster-discovery/client/src/main/resources/logging.properties
+++ b/mod_cluster-discovery/client/src/main/resources/logging.properties
@@ -1,3 +1,8 @@
+#
+# Copyright The WildFly Authors
+# SPDX-License-Identifier: Apache-2.0
+#
+
 # Additional logger names to configure (root logger is always configured)
 loggers=javax.security.sasl,org.wildfly.security.xml,org.jboss.ejb.client,org.wildfly.httpclient.common,org.wildfly.httpclient.ejb,javax.management,io.undertow.client.http,io.undertow.request
 
