Upgrade clusterbench to org.wildfly.clustering.benchmark:clusterbench*:14.0.0.Final
Signed-off-by: Radoslav Husar <radosoft@gmail.com>

--- a/mod_cluster-discovery/client/pom.xml
+++ b/mod_cluster-discovery/client/pom.xml
@@ -37,7 +37,7 @@
 
         <!-- clusterbench ejb libraries -->
         <dependency>
-            <groupId>org.jboss.test</groupId>
+            <groupId>org.wildfly.clustering.benchmark</groupId>
             <artifactId>clusterbench-ee10-ejb</artifactId>
         </dependency>
     </dependencies>
