--- a/mod_cluster-with-tls/client/pom.xml
+++ b/mod_cluster-with-tls/client/pom.xml
@@ -26,7 +26,7 @@
         </dependency>
         <!-- clusterbench ejb libraries -->
         <dependency>
-            <groupId>org.jboss.test</groupId>
+            <groupId>org.wildfly.clustering.benchmark</groupId>
             <artifactId>clusterbench-ee10-ejb</artifactId>
         </dependency>
     </dependencies>
