--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <maven.compiler.target>11</maven.compiler.target>
         <version.wildfly>37.0.1.Final</version.wildfly>
         <version.org.wildfly.plugins.wildfly-maven-plugin>5.1.4.Final</version.org.wildfly.plugins.wildfly-maven-plugin>
-        <version.clusterbench>7.0.0.Final</version.clusterbench>
+        <version.org.wildfly.clustering.benchmark>14.0.0.Final</version.org.wildfly.clustering.benchmark>
         <version.org.apache.maven.plugins.maven-dependency-plugin>3.9.0</version.org.apache.maven.plugins.maven-dependency-plugin>
         <version.org.apache.maven.plugins.maven-clean-plugin>3.5.0</version.org.apache.maven.plugins.maven-clean-plugin>
     </properties>
@@ -39,10 +39,10 @@
                 <version>${version.wildfly}</version>
             </dependency>
             <dependency>
-                <groupId>org.jboss.test</groupId>
+                <groupId>org.wildfly.clustering.benchmark</groupId>
                 <artifactId>clusterbench-ee10-ejb</artifactId>
                 <type>jar</type>
-                <version>${version.clusterbench}</version>
+                <version>${version.org.wildfly.clustering.benchmark}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
